kubernetes/MutatingWebhookConfiguration.yaml

apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: default-container-resources
webhooks:
  - name: default-container-resources.mutating-webhook.svc
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    failurePolicy: Fail
    clientConfig:
      # url: "${HTTPS_TRIGGER_URL}"
      service:
        namespace: mutating-webhook
        name: default-container-resources
        path: /
      # `caBundle` is a PEM encoded CA bundle which will be used to validate
      # the webhook's server certificate.
      # Required.
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDVENDQWZHZ0F3SUJBZ0lKQU5wcjlyNUJVK0NPTUEwR0NTcUdTSWIzRFFFQkN3VUFNQkl4RURBT0JnTlYKQkFNTUIzUmxjM1F0WTJFd0hoY05NVGd3TnpFM01EZ3pOREkwV2hjTk1UZ3dPVEUxTURnek5ESTBXakE3TVRrdwpOd1lEVlFRREREQmtaV1poZFd4MExXTnZiblJoYVc1bGNpMXlaWE52ZFhKalpYTXViWFYwWVhScGJtY3RkMlZpCmFHOXZheTV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURPa1d0UzNGay8KNTVnTDVPeDMzNk9oWFBLTFNFcEo4MFF2M1FUcmk0b3dvQ0hJb05hK3lYQ0ZMaWFPNWpsWFRmbHdnQS9JKzg2YwpKcUptclViT0ZT [...]
    namespaceSelector:
      matchExpressions:
        # - key: environment
        #   operator: NotIn
        #   values:
        #     - prod
        #     - staging
        - key: default-resources-webhook
          operator: NotIn
          values:
            - disabled
